--- a/homework8.html
+++ b/homework8.html
@@ -124,11 +124,41 @@
         </svg>
       </div>
     </section>
-    <footer class="footer">
-      <ul class="footer-ul-1">
-        <li class="main-footer-content">Get’s your discount</li>
-        <li class="footer-content">Check now !</li>
-      </ul>
-    </footer>
+    <!-- FOOTER START -->
+    <div class="footer">
+      <div class="footer_menu">
+        <div class="col_1">
+          <div class="title-1">Get's your discount</div>
+          <ul>
+            <li><a class="title-1-1" href="#">Check now !</a></li>
+          </ul>
+        </div>
+        <div class="col_s2">
+          <div class="title-2">Our services</div>
+          <ul>
+            <li><a class="title-2-1" href="#">Collection</a></li>
+            <li><a class="title-2-2" href="#">How its work</a></li>
+            <li><a class="title-2-3" href="#">Estimats</a></li>
+          </ul>
+        </div>
+        <div class="col_3">
+          <div class="title-3">Company</div>
+          <ul>
+            <li><a href="#">Terms of use</a></li>
+            <li><a href="#">Privacy policy</a></li>
+            <li><a href="#">Career</a></li>
+          </ul>
+        </div>
+        <div class="col_4">
+          <div class="title-4">Contact</div>
+          <ul>
+            <li><a href="#">Business@restaurant</a></li>
+            <li><a href="#">(888) 315-500</a></li>
+            <li><a href="#">St. Village, New York</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER END -->
   </body>
 </html>
