--- a/bestmenu.html
+++ b/bestmenu.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About us</title>
-    <link rel="stylesheet" href="./assets/about-us.css" />
+    <title>Best-menu</title>
+    <link rel="stylesheet" href="assets/bestmenu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,9 +22,6 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@100&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <!-- HEADER START -->
     <header>
       <div class="logo">
         <svg
@@ -57,20 +53,58 @@
         <a href="#">Contact</a>
       </div>
     </header>
-    <!-- HEADER END -->
-    <div class="about-left-side"></div>
-    <div class="about-right-side">
-      <p class="about-colored">About us</p>
-      <p class="text">The Best restaurant in the city</p>
-      <p class="about-description">
-        We are a restaurant that is open to anyone. we are the intermediary
-        medium when it comes to food. do not worry, here it is very easy to find
-        a variety of foods. with very modern facilities you can enjoy it
-        sparingly.
-      </p>
-      <div class="about-blue-rectangle">
-        <h1 class="about-find-button">Find out more</h1>
+    <!-- Header END -->
+    <!-- Section Start -->
+    <section class="text">
+      <div class="best">
+        <h6>Best menu</h6>
       </div>
+      <div class="best-description">
+        <h6>Best food menu in restaurant</h6>
+      </div>
+    </section>
+    <section class="cards">
+      <div class="card1">
+        <div class="card1-box-1"></div>
+        <div class="card1-box-2">
+          <h6 class="card-1-title">Fresh salad</h6>
+          <h6 class="card-1-description">
+            New food and concent interest. best food menuin the city,people....
+          </h6>
+          <h6 class="card1-read-more">
+            <a href="#">Read more</a>
+          </h6>
+        </div>
+      </div>
+      <div class="card2">
+        <div class="card2-box-1"></div>
+        <div class="card2-box-2">
+          <h6 class="card-2-title">Fruits Salad</h6>
+          <h7 class="card-2-description"
+            >New food and concent interest. best food menu in the
+            city,peo....</h7
+          >
+          <h6 class="card2-read-more">
+            <a href="#">Read more</a>
+          </h6>
+        </div>
+      </div>
+      <div class="card3">
+        <div class="card3-box-1"></div>
+        <div class="card3-box-2">
+          <h6 class="card-3-title">Soft mix Salad</h6>
+          <h7 class="card-3-description"
+            >New food and concent interest. best food meu...</h7
+          >
+          <h6 class="card3-read-more">
+            <a href="#">Read more</a>
+          </h6>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION END -->
+    <div class="carusel">
+      <h6 class="number">Number of slide</h6>
     </div>
     <!-- FOOTER START -->
     <div class="footer">
@@ -108,5 +142,6 @@
       </div>
     </div>
     <!-- FOOTER END -->
-  </body>
+  </head>
+  <body></body>
 </html>
