--- a/homework9.html
+++ b/homework9.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About us</title>
-    <link rel="stylesheet" href="./assets/about-us.css" />
+    <title>Test</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="../L9/assets/homework9.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +24,6 @@
     />
   </head>
   <body>
-    <!-- HEADER START -->
     <header>
       <div class="logo">
         <svg
@@ -57,21 +55,75 @@
         <a href="#">Contact</a>
       </div>
     </header>
-    <!-- HEADER END -->
-    <div class="about-left-side"></div>
-    <div class="about-right-side">
-      <p class="about-colored">About us</p>
-      <p class="text">The Best restaurant in the city</p>
-      <p class="about-description">
-        We are a restaurant that is open to anyone. we are the intermediary
-        medium when it comes to food. do not worry, here it is very easy to find
-        a variety of foods. with very modern facilities you can enjoy it
-        sparingly.
+    <section class="enjoy">
+      <p class="restaurant">_RESTAURANT</p>
+      <p class="good">Enjoy a good experience at our restaurant</p>
+      <p class="wemake">
+        We make other people enjoy and give happiness in our restaurant. Come
+        here and relax with your family and loved ones.
       </p>
-      <div class="about-blue-rectangle">
-        <h1 class="about-find-button">Find out more</h1>
+      <p class="blue"></p>
+      <div class="contain">
+        <a href="bestmenu.html">Best menu</a>
       </div>
-    </div>
+      <div class="play">
+        <svg
+          width="10"
+          height="10"
+          viewBox="0 0 10 10"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M8.54348 4.03858C9.38406 4.52389 9.38406 5.73716 8.54348 6.22246L2.86956 9.4983C2.02898 9.98361 0.978261 9.37697 0.978262 8.40635L0.978262 1.85468C0.978262 0.884064 2.02899 0.27743 2.86957 0.762739L8.54348 4.03858Z"
+            fill="#2E47BD"
+          />
+        </svg>
+      </div>
+      <a href="#">See Videos</a>
+      <div class="grey-rectangle"></div>
+      <div class="scroll-down">
+        <svg
+          class="circle-border"
+          width="28"
+          height="28"
+          viewBox="0 0 28 28"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle cx="14" cy="14" r="13" stroke="#3D5ECE" stroke-width="2" />
+        </svg>
+        <svg
+          class="circle-tick"
+          width="10"
+          height="7"
+          viewBox="0 0 10 7"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1 1.875L5 5.875L9 1.875"
+            stroke="#3D5ECE"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+
+        <h1>Scroll Down For More</h1>
+      </div>
+      <div class="ellipse">
+        <svg
+          width="29"
+          height="29"
+          viewBox="0 0 29 29"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle cx="14.5" cy="14.5" r="14.5" fill="#E5E9F9" />
+        </svg>
+      </div>
+    </section>
     <!-- FOOTER START -->
     <div class="footer">
       <div class="footer_menu">
