--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About us</title>
-    <link rel="stylesheet" href="./assets/about-us.css" />
+    <title>Gallery</title>
+    <link rel="stylesheet" href="./assets/gallery.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -58,20 +58,6 @@
       </div>
     </header>
     <!-- HEADER END -->
-    <div class="about-left-side"></div>
-    <div class="about-right-side">
-      <p class="about-colored">About us</p>
-      <p class="text">The Best restaurant in the city</p>
-      <p class="about-description">
-        We are a restaurant that is open to anyone. we are the intermediary
-        medium when it comes to food. do not worry, here it is very easy to find
-        a variety of foods. with very modern facilities you can enjoy it
-        sparingly.
-      </p>
-      <div class="about-blue-rectangle">
-        <h1 class="about-find-button">Find out more</h1>
-      </div>
-    </div>
     <!-- FOOTER START -->
     <div class="footer">
       <div class="footer_menu">
