--- a/testimonial.html
+++ b/testimonial.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About us</title>
-    <link rel="stylesheet" href="./assets/about-us.css" />
+    <title>testimonial</title>
+    <link rel="stylesheet" href="../L9/assets/testimonial.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +24,6 @@
     />
   </head>
   <body>
-    <!-- HEADER START -->
     <header>
       <div class="logo">
         <svg
@@ -50,28 +48,57 @@
           <li><a href="homework9.html">home</a></li>
           <li><a href="about-us.html">about</a></li>
           <li><a href="gallery.html">gallery</a></li>
-          <li><a href="testimonial.html">testimonial</a></li>
+          <li><a href="tertimonial.html">testimonial</a></li>
         </ul>
       </nav>
       <div class="contact">
         <a href="#">Contact</a>
       </div>
     </header>
-    <!-- HEADER END -->
-    <div class="about-left-side"></div>
-    <div class="about-right-side">
-      <p class="about-colored">About us</p>
-      <p class="text">The Best restaurant in the city</p>
-      <p class="about-description">
-        We are a restaurant that is open to anyone. we are the intermediary
-        medium when it comes to food. do not worry, here it is very easy to find
-        a variety of foods. with very modern facilities you can enjoy it
-        sparingly.
-      </p>
-      <div class="about-blue-rectangle">
-        <h1 class="about-find-button">Find out more</h1>
+    <!-- Header END -->
+    <!-- SECTION START -->
+    <section class="content">
+      <div class="testimonial">
+        <h6>Testimonial</h6>
       </div>
-    </div>
+      <div class="description">
+        <h6>What costumers says about best food in restaurant</h6>
+      </div>
+      <div class="container">
+        <div class="box-1">
+          <div class="img"></div>
+          <div class="section-title">Julian Brandt</div>
+          <div class="desc">
+            “Provide the best service and very fast response.”
+          </div>
+        </div>
+        <div class="box-2">
+            <div class="img"></div>
+            <div class="section-title">Rita Malcokt</div>
+            <div class="desc">
+              With a 5-year warranty provided, providing satisfying service.
+            </div>
+        </div>
+        <div class="box-3">
+            <div class="img"></div>
+            <div class="section-title">Joshua White</div>
+            <div class="desc">
+              “The best restaurant in the world. Best provide from waitress and
+              chef”
+            </div>
+        </div>
+        <div class="box-4">
+            <div class="img"></div>
+            <div class="section-title">Elisa Kim</div>
+            <div class="desc">
+              “So very nice in this restaurant. you should be try again even you
+              don’t have money.“
+            </div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION END -->
     <!-- FOOTER START -->
     <div class="footer">
       <div class="footer_menu">
